Update build command in Netlify configuration and add @netlify/angular-runtime dependency
- Changed the build command in netlify.toml to include server production build.
- Added @netlify/angular-runtime package to package.json and package-lock.json for enhanced functionality.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/lakeside-luxury-apartments/browser"
-  command = "ng build"
+  command = "ng build && ng run lakeside-luxury-apartments:server:production"
 
 [[redirects]]
   from = "/*"
