--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/lakeside-luxury-apartments/browser"
-  command = "ng build && ng run lakeside-luxury-apartments:server:production"
+  command = "ng build"
 
 [[redirects]]
   from = "/*"
