--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,9 +10,7 @@
     ]
   },
   "files": [
-    "src/main.ts",
-    "src/main.server.ts",
-    "src/server.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
